# claude-channel

./: .gitattributes  Cargo.toml  Dockerfile  README.md  docker-compose.yml  mise.toml
.devcontainer/: devcontainer.json  docker-compose.yml
.zed/: settings.json  tasks.json
examples/: all-sources.yaml  webhook.yaml
scripts/: audit-test-data.py  generate-test-data.sh  session-list.sh  session-start.sh  test-3-sessions.sh
scripts/mise/: session.sh  test-all.sh  test-multi.sh  test.sh  up.sh
src/: config.rs  coordination.rs  dashboard.html  dashboard.rs  main.rs  mcp.rs  protocol.rs  server.rs  shim.rs
src/sources/: mod.rs  nats.rs  postgres.rs  redis.rs  sqs.rs  webhook.rs
