[package]
name = "claude-channel"
version = "0.2.0"
edition = "2021"

[features]
default = ["webhook"]
webhook = []
sqs = ["dep:aws-sdk-sqs", "dep:aws-config"]
redis = ["dep:redis", "dep:futures"]
postgres = ["dep:tokio-postgres", "dep:futures"]
nats = ["dep:async-nats", "dep:futures"]

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
async-trait = "0.1"
anyhow = "1"

# Optional source dependencies
aws-sdk-sqs = { version = "1", optional = true }
aws-config = { version = "1", optional = true }
redis = { version = "0.27", features = ["tokio-comp", "aio"], optional = true }
tokio-postgres = { version = "0.7", optional = true }
futures = { version = "0.3", optional = true }
async-nats = { version = "0.38", optional = true }
